when user prints the paper has so much margin left make sure it covers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,6 +90,10 @@ body {
 
 /* Styles for printing the canvas */
 @media print {
+  @page {
+    size: auto;
+    margin: 0;
+  }
   body, html {
     margin: 0;
     padding: 0;
@@ -109,8 +113,8 @@ body {
     position: fixed;
     left: 0;
     top: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 0;
     margin: 0;
     transform: scale(1);
